# mesocycle_planner

./: GIT_COMMITS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  start-backend.sh
wsc-meso/: .env.example  .gitignore  QUICKSTART.md  README.md  STRUCTURE.md  TESTING.md  docker-compose.yml  openapi.yaml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg
wsc-meso/.openapi-generator/: FILES
wsc-meso/domain/entities/: __init__.py  exercise.py  mesocycle.py  microcycle.py  progress.py  training_session.py  user.py  workout.py
wsc-meso/domain/repositories/: __init__.py  exercise_repository.py  mesocycle_repository.py  progress_repository.py  user_repository.py  workout_repository.py
wsc-meso/infrastructure/config/: __init__.py  database.py  settings.py
wsc-meso/infrastructure/persistence/: __init__.py
wsc-meso/infrastructure/persistence/models/: __init__.py  exercise_model.py  mesocycle_model.py  progress_model.py  user_model.py  workout_model.py
wsc-meso/infrastructure/persistence/repositories/: __init__.py  exercise_repository_impl.py  mesocycle_repository_impl.py  progress_repository_impl.py  user_repository_impl.py  workout_repository_impl.py
wsc-meso/infrastructure/persistence/seed/: init-mongo.js
wsc-meso/src/openapi_server/: main.py
wsc-meso/tests/: test_authentication_api.py  test_exercises_api.py  test_mesocycles_api.py  test_progress_api.py  test_progression_api.py  test_tracking_api.py  test_users_api.py  test_workouts_api.py
wsc-meso/tests/integration/: test_repositories.py
wsc-meso/tests/unit/: test_domain_entities.py
(+106 files in other folders)
