[metadata]
name = openapi_server
version = 1.0.0
description = Complete API for fitness training app with advanced periodization support. Features: 440+ exercises database, Linear/DUP/Block/Polarized periodization models, microcycle management, auto-progression, session logging, and AI-generated training plans.  Supports user authentication, mesocycle planning, workout tracking, and progress analytics. 
long_description = file: README.md
keywords = OpenAPI Mesocycle Planner API - Advanced Periodization
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
